--- a/app/runtimes.yml
+++ b/app/runtimes.yml
@@ -22,38 +22,74 @@ runtimes:
                 && update-alternatives --set "$tool" "$tool_path";
               fi;
             done
+      corretto21:
+        commands:
+          - echo "Installing Java version 21 ..."
+
+          - export JAVA_HOME="$JAVA_21_HOME"
+
+          - export JRE_HOME="$JRE_21_HOME"
+
+          - export JDK_HOME="$JDK_21_HOME"
+
+          - |-
+            for tool_path in "$JAVA_HOME"/bin/*;
+             do tool=`basename "$tool_path"`;
+              if [ $tool != 'java-rmi.cgi' ];
+              then
+               update-alternatives --list "$tool" | grep -q "$tool_path" \
+                && update-alternatives --set "$tool" "$tool_path";
+              fi;
+            done
   golang:
     versions:
-      1.18:
+      1.20:
         commands:
-          - echo "Installing Go version 1.18 ..."
-          - goenv global  $GOLANG_18_VERSION
+          - echo "Installing Go version 1.20 ..."
+          - goenv global  $GOLANG_20_VERSION
+      1.21:
+        commands:
+          - echo "Installing Go version 1.21 ..."
+          - goenv global  $GOLANG_21_VERSION
   python:
     versions:
-      3.10:
+      3.11:
         commands:
-          - echo "Installing Python version 3.10 ..."
-          - pyenv global  $PYTHON_310_VERSION
+          - echo "Installing Python version 3.11 ..."
+          - pyenv global  $PYTHON_311_VERSION
+      3.12:
+        commands:
+          - echo "Installing Python version 3.12 ..."
+          - pyenv global  $PYTHON_312_VERSION
   php:
     versions:
-      8.1:
+      8.2:
         commands:
-          - echo "Installing PHP version 8.1 ..."
-          - phpenv global $PHP_81_VERSION
+          - echo "Installing PHP version 8.2 ..."
+          - phpenv global $PHP_82_VERSION
   ruby:
     versions:
-      3.1:
+      3.2:
         commands:
-          - echo "Installing Ruby version 3.1 ..."
-          - rbenv global $RUBY_31_VERSION
+          - echo "Installing Ruby version 3.2 ..."
+          - rbenv global $RUBY_32_VERSION
   nodejs:
     versions:
-      16:
+      18:
         commands:
-          - echo "Installing Node.js version 16 ..."
-          - n $NODE_16_VERSION
+          - echo "Installing Node.js version 18 ..."
+          - n $NODE_18_VERSION
+      20:
+        commands:
+          - echo "Installing Node.js version 20 ..."
+          - n $NODE_20_VERSION
   dotnet:
     versions:
       6.0:
         commands:
           - echo "Installing .NET version 6.0 ..."
+          - test -f "global.json" && echo "Using provided global.json" || dotnet new globaljson --force --sdk-version $DOTNET_6_GLOBAL_JSON_SDK_VERSION --roll-forward feature
+      8.0:
+        commands:
+          - echo "Installing .NET version 8.0 ..."
+          - test -f "global.json" && echo "Using provided global.json" || dotnet new globaljson --force --sdk-version $DOTNET_8_GLOBAL_JSON_SDK_VERSION --roll-forward feature
