--- a/project_configs/environment_options/environment_options.yml
+++ b/project_configs/environment_options/environment_options.yml
@@ -1,14 +1,14 @@
 project_name: "codebuild_devsecops_iac_images"
 framework_version: 2
 
-account_devsecops: "#{account_devsecops}#"
-region_devsecops: "#{region_devsecops}#"
+account_devsecops: "105171185823"
+region_devsecops: "us-east-2"
 
 chatops:
   slack_integration:
     enable: "true"
-    slack_workspace_id: "#{slack_workspace_id}#"
-    slack_channel_id: "#{slack_channel_id}#"
+    slack_workspace_id: "T06U1RD49J9"
+    slack_channel_id: "C06TY"
 
 #Repository for project
 repository_properties:
@@ -20,10 +20,10 @@ repository_properties:
 #Designed for pipeline
 environments:
   - environment: 'dev'
-    deployment_account: '#{deployment_account}#'
-    deployment_region: "#{deployment_region}#"
+    deployment_account: '155794986228'
+    deployment_region: "us-east-2"
     partner_review_email:
-      - '#{partner_review_email}#'
+      - 'test@test.com'
 
 ecr_repository_properties:
   - repository_name: "codebuild_devsecops_iac"
@@ -47,8 +47,6 @@ ecr_repository_properties:
 # Tags definitions align with corporation instructions
 tags:
   - key: 'Project'
-    value: '#{project}#'
+    value: 'codebuild-devsecopsiac-base'
   - key: 'Environment'
-    value: '#{environment}#'
-
-
+    value: 'dev'
